--- a/app.json
+++ b/app.json
@@ -43,6 +43,9 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "grokApiKey": "${GROK_API_KEY}"
     }
   }
 }
